shared/css/bootstrap_override.css
/* ... */
.tab-headers button[aria-selected='true']:focus {
	border-right: 1px solid rgb(38 143 255 / 50%);
	border-left: 1px solid rgb(38 143 255 / 50%);
	border-top: 3px solid rgb(38 143 255 / 50%);
}
.tab-headers button[aria-selected='false'] {
	color: black;
	background-color: #f5f5f5;
	border-bottom: 1px solid #3e657D;
	border-top: 3px solid #deebec;
	cursor: pointer;
	border-right: 1px solid #deebec;
	border-left: 1px solid #deebec;
}
.tab-content h2 {
	font-size: 80%;
	font-weight: 700;
	padding-top: 2px !important;
	padding-bottom: 2px !important;
	background-color: rgb(199 251 255 / .35) !important;
	border: 1px solid #dee2e6 !important;
	margin: 0;
	display: block !important;
}
.tab-content div[aria-hidden='true'] {
	display: none;
	outline: 0;
}
.tab-content div[aria-hidden='false'] {
	display: block;
}
.tab-content label, #searchForm fieldset label {
	font-weight: 400;
	font-size: 0.85em;
	border: none;
	padding: 0 0 0 .25rem;
	margin-bottom: 0;
}
/* These styles are for all search pages (e.g., specimen search, taxonomy, agents). 
The #searchFormDiv is on all search pages to control form fields, labels, select, and buttons. */
.tab-content input[type="text"], #searchForm fieldset input[type="text"] {
	display: block;
	width: 100%;
	padding: 2px .5rem;
	color: black;
	border: 1px solid #ced4da;
	background-clip: padding-box;
	background-color: white;
	vertical-align: middle;
	font: 500 .875rem/1.4 apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
	line-height: 1.15rem;
	border-radius: .2rem;
}
.tab-content input[type="button"] #searchForm fieldset input[type="button"] {
	border: none;
	padding: 0 .15rem;
}
.tab-content select, #searchForm fieldset select {
	display: block;
	width: 100% !important;
	font: 500 .875rem apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	padding: 2px .5rem;
	color: black;
	border: 1px solid #ced4da;
	background-clip: padding-box;
	background-color: white;
	vertical-align: middle;
	border-radius: .2rem;
	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
	line-height: 0.875rem;
	height: 23px;
}
.jqx-combobox-input, .jqx-combobox-content, .jqx-combobox-arrow-normal {
	min-height: 23px !important;
}
.jqx-combobox {
	min-height: 21px !important;
}
.tab-content button.rules, #searchForm button.rules[type="button"] {
	border: none;
	padding: 0;
	color: #0460c1 !important;
	font-weight: 400;
	font-size: 0.85em;
	text-decoration: underline dotted #0460c1;
}
#searchForm span.rules {
	border: none;
	padding: 0;
	color: #212529 !important;
	font-weight: 400;
	font-size: 0.85em;
}
#searchFormDiv input[type="radio"] {
	position: absolute;
	left: 0;
	top: 0.2rem;
}
/* for Specimen Details section headers and cards (e.g., citations)*/
.headerLnk {
	color: #212529 !important;
	text-decoration: none;
	padding: 0 .5rem;
}
.accordion .card-header {
	padding: 0;
}
.accordion .card-header h2 button, .accordion .card-header h3 button {
	padding: .15rem .875rem;
	border: 2px dotted transparent;
	box-shadow: none;
}
.accordion .card-header h2 button:focus, .accordion .card-header h3 button:focus {
	border: 2px inset rgba(255, 193, 7, .2) !important;
	box-shadow: none;
}
.card-header h1 button.collapsed span:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 900;
	float: left !important;
	content: "\f067";
	cursor: pointer;
}
.card-header h1 button span:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 900;
	content: "\f068";
	padding-right: 5px;
	float: left !important;
}
.card-header h2 button, .card-header h3 button {
	font-weight: 500;
}
.card-header h2 button[aria-expanded="false"]:before, .card-header h3 button[aria-expanded="false"]:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 600;
	font-size: smaller;
	float: left !important;
	content: "\f0fe"; /*plus*/
	padding-top: 2px;
	cursor: pointer;
	padding-right: 6px;
}
.card-header h2 button[aria-expanded="true"]:before, .card-header h3 button[aria-expanded="true"]:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 600;
	font-size: smaller;
	content: "\f146"; /*minus*/
	padding-right: 6px;
	padding-top: 2px;
	float: left !important;
	cursor: pointer;
}
.accordion .card-header h3 button:focus {
	border: 2px inset rgba(255, 193, 7, .2) !important;
	box-shadow: none;
}
.card-header h3 a:hover, .card-header h3 a:active, .card-header h3 a:focus {
	text-decoration: none;
}
a.anchorFocus, button.anchorFocus {
	outline: 0;
	box-shadow: 0 0 0 0 transparent;
	margin: .25rem .75rem;
	display: block;
	position: absolute;
	z-index: 3;
	top: 0;
	right: 0;
	color: #0460c1;
	text-decoration: underline dotted #aaa;
}
a.anchorFocus:focus, button.anchorFocus:focus {
	border: 2px inset rgba(0, 123, 255, .25) !important;
	border: 2px inset rgba(255, 193, 7, .2) !important;
	outline: 0;
	box-shadow: 0 0 0 0 transparent;
	margin: .18rem .67rem;
}
div[aria-hidden='true'] {
	display: none;
}
div[aria-hidden='false'] {
	display: block;
}
.hidden {
	display: none;
}
.show {
	display: block;
}
/* Identification section of specimen details page */
.currentID {
	display: block !important;
	color: #18780b !important;
}
.formerID {
	display: block !important;
	color: #208738 !important;
}
a.btn-outline-primary {
	background-color: white;
	padding-bottom: .05rem;
	color: #006ee3;
	text-decoration: none;
	font-size: .785rem;
}
a.btn-outline-primary:hover, a.btn-outline-primary:not(:disabled):not(.disabled):active {
	background-color: #006ee3;
	text-decoration: none;
	color: white !important;
	padding-bottom: .05rem;
	font-size: .785rem;
}
.btn-outline-primary:focus {
	box-shadow: 0 0 0 0.2rem rgb(0 123 255 /25%);
}
/* ... */

